--- a/ansible/configuration/playbooks/docker_install_centos.yaml
+++ b/ansible/configuration/playbooks/docker_install_centos.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install docker community edition
-  gather_facts: No
+  gather_facts: false
   hosts: all
 
   tasks:
@@ -14,24 +14,24 @@
       get_url:
         url: https://download.docker.com/linux/centos/docker-ce.repo
         dest: /etc/yum.repos.d/docer-ce.repo
-      become: yes
+      become: true
 
     - name: Install Docker
       package:
         name: docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
         state: latest
-      become: yes
+      become: true
 
     - name: Start Docker service
       service:
         name: docker
         state: started
         enabled: yes
-      become: yes
+      become: true
 
     - name: Add user vagrant to docker group
       user:
         name: vagrant
         groups: docker
         append: yes
-      become: yes
+      become: true
