--- a/ansible/configuration/playbooks/docker_install_centos.yaml
+++ b/ansible/configuration/playbooks/docker_install_centos.yaml
@@ -19,7 +19,7 @@
 
     - name: Install Docker
       package:
-        name: docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+        name: docker-ce, docker-ce-cli, containerd.io, docker-buildx-plugin, docker-compose-plugin
         state: latest
       become: true
 
