--- a/ansible/configuration/playbooks/docker_portainer_agent.yaml
+++ b/ansible/configuration/playbooks/docker_portainer_agent.yaml
@@ -1,19 +1,24 @@
-- name: Install Python requirements
-  become: true
-  ansible.builtin.pip:
-    name: docker
+- name: Install portainer
+  hosts: all
 
-- name: Install portainer agent
-  become: true
-  community.docker.docker_container:
-    name: "portainer_agent"
-    state: started
-    container_default_behavior: no_defaults
-    image: portainer/agent:latest
-    restart_policy: always
-    ports:
-      - "9001:9001"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/volumes:/var/lib/docker/volumes
-      - /:/host
+  tasks:
+
+    - name: Install Python requirements
+      become: true
+      ansible.builtin.pip:
+        name: docker
+
+    - name: Install portainer agent
+      become: true
+      community.docker.docker_container:
+        name: "portainer_agent"
+        state: started
+        container_default_behavior: no_defaults
+        image: portainer/agent:latest
+        restart_policy: always
+        ports:
+          - "9001:9001"
+        volumes:
+          - /var/run/docker.sock:/var/run/docker.sock
+          - /var/lib/docker/volumes:/var/lib/docker/volumes
+          - /:/host
