--- a/ansible/playbooks/deployment/docker_portainer_agent.yaml
+++ b/ansible/playbooks/deployment/docker_portainer_agent.yaml
@@ -1,10 +1,8 @@
-- name: Install portainer
+- name: Install portainer agent
   hosts: all
 
   tasks:
-
-    
-
+  
     - name: Install portainer agent
       become: true
       community.docker.docker_container:
