--- a/docker-compose/ansible-semaphore/compose.yaml
+++ b/docker-compose/ansible-semaphore/compose.yaml
@@ -6,7 +6,7 @@ volumes:
 services:
 
   mysql:
-    image: docker.io/library/mysql:8.3
+    image: docker.io/library/mysql:latest
     hostname: mysql
     volumes:
       - semaphore-mysql:/var/lib/mysql
@@ -16,10 +16,10 @@ services:
       - MYSQL_USER=semaphore
       - MYSQL_PASSWORD=secret-password  # change!
     restart: unless-stopped
-    
+
   semaphore:
     container_name: ansiblesemaphore
-    image: docker.io/semaphoreui/semaphore:v2.10.22
+    image: docker.io/semaphoreui/semaphore:latest
     user: "${UID}:${GID}"
     ports:
       - 3000:3000
