Fix installation of EPEL release

--- a/ansible/playbooks/installation/ansible.yaml
+++ b/ansible/playbooks/installation/ansible.yaml
@@ -6,10 +6,12 @@
 
   tasks:
 
-    - name: Add ansible repository
-      ansible.builtin.yum_repository:
-        name: epel-release
-        state: present
+    - name: Install Extra Packages for Enterprise Linux (EPEL)
+      ansible.builtin.yum:
+        name:
+          - epel-release
+        state: latest
+        update_cache: true
 
     - name: Install ansible
       ansible.builtin.yum:
