--- a/ansible/playbooks/deployment/semaphore.yaml
+++ b/ansible/playbooks/deployment/semaphore.yaml
@@ -6,7 +6,7 @@
   tasks:
 
     - name: Deploy Semaphore with docker-compose file and start services
-      community.docker.docker_compose:
+      community.docker.docker_compose_v2:
         project_src: ./docker-compose/ansible-semaphore/
         files:
         - compose.yaml
