--- a/ansible/playbooks/configuration/sshkey-sudoers.yaml
+++ b/ansible/playbooks/configuration/sshkey-sudoers.yaml
@@ -1,19 +1,27 @@
 ---
 - name: Add ssh key
   hosts: all
+  gather_facts: false
   become: true
 
   tasks:
+
+    - name: Synchronization of src on the control machine to dest on the remote hosts
+      ansible.posix.synchronize:
+        src: "{{ lookup('ansible.builtin.env', 'ssl_key_path') }}"
+        dest: "{{ lookup('ansible.builtin.env', 'ssl_key_path') }}"
+
     - name: Install public keys
       ansible.posix.authorized_key:
-        user: "{{ lookup('env', 'USER') }}"
+        user: "{{ lookup('ansible.builtin.env', 'ssl_user') }}"
         state: present
-        key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+        key: "{{ lookup('ansible.builtin.env', 'ssl_key_path') }}"
 
     - name: Change sudoers file
       ansible.builtin.lineinfile:
-        path: /etc/sudoers.d
+        path: "/etc/sudoers.d/{{ lookup('ansible.builtin.env', 'ssl_user') }}"
         state: present
-        regexp: '^%sudo'
-        line: '%sudo ALL=(ALL) NOPASSWD: ALL'
-        validate: /usr/sbin/visudo -cf %s
+        create: true
+        regexp: 'ALL=\(ALL\) NOPASSWD: ALL'
+        line: "{{ lookup('ansible.builtin.env', 'ssl_user') }} ALL=(ALL) NOPASSWD: ALL"
+        mode: '0440'
