--- a/ansible/playbooks/configuration/sshkey-sudoers.yaml
+++ b/ansible/playbooks/configuration/sshkey-sudoers.yaml
@@ -11,7 +11,7 @@
         path: "{{ lookup('ansible.builtin.env', 'ssl_key_dir') }}"
         state: directory
         mode: '0755'
-      become: false
+      become: true
 
     - name: Synchronization of src on the control machine to dest on the remote hosts
       ansible.posix.synchronize:
