--- a/ansible/playbooks/configuration/sshkey-sudoers.yaml
+++ b/ansible/playbooks/configuration/sshkey-sudoers.yaml
@@ -14,7 +14,7 @@
       become: true
 
     - name: Synchronization of src on the control machine to dest on the remote hosts
-      ansible.posix.synchronize:
+      ansible.builtin.copy:
         src: "{{ lookup('ansible.builtin.env', 'ssl_key_path') }}"
         dest: "{{ lookup('ansible.builtin.env', 'ssl_key_path') }}"
 
