--- a/ansible/playbooks/configuration/sshkey-sudoers.yaml
+++ b/ansible/playbooks/configuration/sshkey-sudoers.yaml
@@ -6,7 +6,18 @@
 
   tasks:
 
-    
+    - name: Create a directory to store the ssh key
+      ansible.builtin.file:
+        path: "{{ lookup('ansible.builtin.env', 'ssl_key_dir') }}"
+        state: directory
+        mode: '0755'
+      become: true
+
+    - name: Synchronization of src on the control machine to dest on the remote hosts
+      ansible.builtin.copy:
+        src: "{{ lookup('ansible.builtin.env', 'ssl_key_path') }}.pub"
+        dest: "{{ lookup('ansible.builtin.env', 'ssl_key_path') }}.pub"
+      become: true
 
     - name: Install public keys
       ansible.posix.authorized_key:
