--- a/ansible/playbooks/configuration/sshkey-generation.yaml
+++ b/ansible/playbooks/configuration/sshkey-generation.yaml
@@ -21,13 +21,13 @@
     - name: Ensure correct permissions for the public ssh key
       ansible.builtin.file:
         path: "{{ lookup('ansible.builtin.env', 'ssl_key_dir') }}/{{ ssl_key_name }}.pub"
-        state: present
+        state: file
         mode: '0644'
 
     - name: Ensure correct permissions for the private ssh key
       ansible.builtin.file:
         path: "{{ lookup('ansible.builtin.env', 'ssl_key_dir') }}/{{ ssl_key_name }}"
-        state: present
+        state: file
         mode: '0600'
 
     - name: Retrieve the key
