--- a/ansible/playbooks/configuration/sshkey-sudoers.yaml
+++ b/ansible/playbooks/configuration/sshkey-sudoers.yaml
@@ -18,7 +18,7 @@
       ansible.posix.authorized_key:
         user: "{{ lookup('ansible.builtin.env', 'ssl_user') }}"
         state: present
-        key: "{{ lookup('ansible.builtin.env', 'ssl_key_dir', default='/devops/ssh') }}/{{ ssl_key_name }}"
+        key: "{{ lookup('ansible.builtin.env', 'ssl_key_dir', default='/devops/ssh') }}/{{ ssl_key_name }}.pub"
 
     - name: Change sudoers file
       ansible.builtin.lineinfile:
