Changed registering of SSH keys

--- a/ansible/playbooks/configuration/sshkey-sudoers.yaml
+++ b/ansible/playbooks/configuration/sshkey-sudoers.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Register SSH public key on targets
-  hosts: nodes
+  hosts: controller
   gather_facts: false
 
   vars:
@@ -14,11 +14,19 @@
         state: directory
         mode: '0700'
 
+    - name: Fetch the public SSH key
+      shell: cat "{{ lookup('ansible.builtin.env', 'ssh_key_dir', default='/devops/ssh') }}/{{ ssl_key_name }}.pub"
+      register: ssh_key
+
     - name: Install public keys
       ansible.posix.authorized_key:
         user: "{{ lookup('ansible.builtin.env', 'ssh_user') }}"
         state: present
-        key: "{{ lookup('ansible.builtin.env', 'ssh_key_dir', default='/devops/ssh') }}/{{ ssl_key_name }}.pub"
+        key: "{{ item[0] }}"
+      delegate_to: "{{ item[1] }}"
+      with_nested:
+        - "{{ ssh_key.stdout }}"
+        - "{{ groups['nodes'] }}"
 
     - name: Change sudoers file
       ansible.builtin.lineinfile:
