--- a/ansible/playbooks/installation/docker_install_centos.yaml
+++ b/ansible/playbooks/installation/docker_install_centos.yaml
@@ -29,6 +29,12 @@
         state: latest
         update_cache: true
 
+    - name: Ensure docker service is stopped
+      ansible.builtin.service:
+        name: docker
+        state: stopped
+        enabled: yes
+
     - name: Ensure group "docker" exists
       ansible.builtin.group:
         name: docker
@@ -43,5 +49,5 @@
     - name: Restart docker service, if not started
       ansible.builtin.service:
         name: docker
-        state: restarted
+        state: started
         enabled: yes
