Changed hosts attribute

--- a/ansible/playbooks/deployment/semaphore.yaml
+++ b/ansible/playbooks/deployment/semaphore.yaml
@@ -1,8 +1,7 @@
 ---
 - name: Deploy Semaphore UI for Ansible on Docker
-  hosts: all
+  hosts: controller
   gather_facts: false
-  become: true
 
   tasks:
 
