--- a/ansible/playbooks/update/update_packages.yaml
+++ b/ansible/playbooks/update/update_packages.yaml
@@ -8,7 +8,7 @@
       ansible.builtin.apt:
         update_cache: true
 
-    - name: Update packages with yum
+    - name: Update all packages with yum
       when: ansible_pkg_mgr == 'yum'
       ansible.builtin.yum:
         name: '*'
