Changed state to started

--- a/ansible/playbooks/deployment/docker_grafana.yaml
+++ b/ansible/playbooks/deployment/docker_grafana.yaml
@@ -26,4 +26,4 @@
         networks:
           - name: monitoring_network
         restart_policy: unless-stopped
-        state: present
+        state: started
