--- a/ansible/playbooks/deployment/docker_prometheus.yaml
+++ b/ansible/playbooks/deployment/docker_prometheus.yaml
@@ -25,4 +25,4 @@
         networks:
           - name: monitoring_network
         restart_policy: unless-stopped
-        state: present
+        state: started
