Fixed quotes in daemon file creation

--- a/ansible/playbooks/installation/docker.yaml
+++ b/ansible/playbooks/installation/docker.yaml
@@ -45,8 +45,8 @@
         path: "/etc/docker/daemon.json"
         state: present
         create: true
-        regexp: "{ 'metrics-addr': '127.0.0.1:9323' }"
-        line: "{ 'metrics-addr': '127.0.0.1:9323' }"
+        regexp: '{ "metrics-addr": "127.0.0.1:9323" }'
+        line: '{ "metrics-addr": "127.0.0.1:9323" }'
 
     - name: Start docker service, if not started
       ansible.builtin.service:
