--- a/ansible/playbooks/installation/docker.yaml
+++ b/ansible/playbooks/installation/docker.yaml
@@ -45,8 +45,14 @@
         path: "/etc/docker/daemon.json"
         state: present
         create: true
-        regexp: '{ "metrics-addr": "127.0.0.1:9323" }'
-        line: '{ "metrics-addr": "127.0.0.1:9323" }'
+        regexp: '{ "metrics-addr": "0.0.0.0:9323" }'
+        line: '{ "metrics-addr": "0.0.0.0:9323" }'
+
+    - name: Allow traffic in default zone on port 9323/tcp
+      ansible.posix.firewalld:
+        port: 9323/tcp
+        permanent: true
+        state: enabled
 
     - name: Start docker service, if not started
       ansible.builtin.service:
