Fixed volume creation

--- a/ansible/playbooks/deployment/docker_sonarqube.yaml
+++ b/ansible/playbooks/deployment/docker_sonarqube.yaml
@@ -6,9 +6,11 @@
   tasks:
     - name: Ensure the volume is created
       community.docker.docker_volume:
-        name:
-          - sonardb
-          - sonardb_data
+        name: sonar_db
+
+    - name: Ensure the volume is created
+      community.docker.docker_volume:
+        name: sonar_db_data
 
     - name: Ensure the devops network is created
       community.docker.docker_network:
