--- a/ansible/playbooks/deployment/docker_sonarqube.yaml
+++ b/ansible/playbooks/deployment/docker_sonarqube.yaml
@@ -6,11 +6,11 @@
   tasks:
     - name: Ensure the volume is created
       community.docker.docker_volume:
-        name: sonar_db
+        name: sonarqube_db
 
     - name: Ensure the volume is created
       community.docker.docker_volume:
-        name: sonar_db_data
+        name: sonarqube_db_data
 
     - name: Ensure the volume is created
       community.docker.docker_volume:
@@ -39,7 +39,7 @@
 
     - name: Deploy Sonarqube Postgres database
       community.docker.docker_container:
-        name: sonardb
+        name: sonar_db
         image: postgres:latest
         ports:
           - "5432:5432"
@@ -69,8 +69,8 @@
           SONAR_JDBC_USERNAME: sonar
           SONAR_JDBC_PASSWORD: sonar
         volumes:
-          - sonar_db:/var/lib/postgresql
-          - sonar_db_data:/var/lib/postgresql/data
+          - sonarqube_db:/var/lib/postgresql
+          - sonarqube_db_data:/var/lib/postgresql/data
         networks:
           - name: devops_network
         restart_policy: unless-stopped
