Fixed user escalation

--- a/ansible/playbooks/installation/webmin.yaml
+++ b/ansible/playbooks/installation/webmin.yaml
@@ -67,3 +67,4 @@
         prepend_newline: true
         block: |
           referers="{{ lookup('ansible.builtin.env', 'webmin_url') }}"
+      become: true
