--- a/ansible/playbooks/deployment/docker_jenkins.yaml
+++ b/ansible/playbooks/deployment/docker_jenkins.yaml
@@ -30,6 +30,7 @@
           - /opt/jenkins/home:/var/jenkins_home
           # Mounts the host machine’s docker socket to the Jenkins container due to docker-in-docker (use docker to create docker image inside jenkins docker container)
           - /var/run/docker.sock:/var/run/docker.sock
+        privileged: yes
         networks:
           - name: devops_network
         restart_policy: unless-stopped
