Specified Jenkins container user

--- a/ansible/playbooks/deployment/docker_jenkins.yaml
+++ b/ansible/playbooks/deployment/docker_jenkins.yaml
@@ -31,8 +31,8 @@
           # Mounts the host machine’s docker socket to the Jenkins container due to docker-in-docker (use docker to create docker image inside jenkins docker container)
           - /var/run/docker.sock:/var/run/docker.sock
         privileged: yes
+        user: root
         networks:
           - name: devops_network
         restart_policy: unless-stopped
         state: started
-      become: true
