--- a/ansible/playbooks/deployment/docker_semaphore.yaml
+++ b/ansible/playbooks/deployment/docker_semaphore.yaml
@@ -80,7 +80,7 @@
           SEMAPHORE_ADMIN_EMAIL: admin@localhost
           SEMAPHORE_ADMIN: admin
           SEMAPHORE_ACCESS_KEY_ENCRYPTION: change-this-key  # add to your access key encryption !
-          ANSIBLE_HOST_KEY_CHECKING: false  # (optional) change to true if you want to enable host key checking
+          ANSIBLE_HOST_KEY_CHECKING: "false"  # (optional) change to true if you want to enable host key checking
         networks:
           - name: semaphore_network
         user: "{{ lookup('ansible.builtin.env', 'ssh_uid') }}:{{ lookup('ansible.builtin.env', 'ssh_gid') }}"
