--- a/ansible/playbooks/deployment/docker_semaphore.yaml
+++ b/ansible/playbooks/deployment/docker_semaphore.yaml
@@ -89,3 +89,4 @@
           - /opt/semaphore/authorized-keys/:/authorized-keys:ro
           - /opt/semaphore/config/:/etc/semaphore:rw
         restart_policy: unless-stopped
+        become: true
